[workspace]
members = [
    "programs/credit-token",
]
resolver = "2"

[package]
name = "credit_token"
version = "0.1.0"
description = "Credit token purchase and management program"
edition = "2021"
license = "MIT"
repository = "https://github.com/VOM-AS/credit-token-program"

[lib]
name = "credit_token"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-security-txt = "1.1.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
debug = false
debug-assertions = false
panic = "abort"
incremental = false
rpath = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 