[workspace]
members = [
    "programs/credit-token",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
debug = false
debug-assertions = false
panic = "abort"
incremental = false
rpath = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 